--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 		<title>My first three.js app</title>
 		<style>
 			body { margin: 0; }
+            #debug {
+                position: fixed;
+                background-color: rgba(0, 0, 0, 0.5);
+                color: white;
+                padding: 10px;
+            }
 		</style>
 	</head>
 	<body>
+        <pre id="debug"></pre>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
